--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -10,6 +10,6 @@
   ],
   "theme": "system",
   "baseFontSize": 16,
-  "textFontFamily": "LXGW WenKai GB Screen R",
+  "textFontFamily": "LXGW WenKai GB Screen",
   "showViewHeader": true
 }
